# trackpad-math

./: .env  .gitignore  LICENSE  README.md  build_backend.spec  compose.yaml  main.py  model.pkl  model_dtw.pkl  model_knn.pkl  model_rf.pkl  pyproject.toml  requirements.txt  verify_pipeline.py
.github/scripts/: generate-latest.mjs
.github/workflows/: main.yml  release-macos.yml  release-ubuntu.yml  release-windows.yml  release.yml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: splashscreen.html
frontend/src/: App.tsx  _mantine.scss  config.ts  global.d.ts  index.css  main.tsx  vite-env.d.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json  updater.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs  main.rs
frontend/src/api/: client.ts  config.ts
frontend/src/components/: BatchTrainModal.tsx  DataViewer.tsx  MainLayout.tsx  MathInput.tsx  RecordingOverlay.tsx  StrokeCanvas.tsx  SuggestionsBox.tsx  TeachModal.tsx  TrainingTable.tsx
frontend/src/hooks/: useCategories.ts  useClassification.ts  useDataViewer.ts  useMathInput.ts  useRecorder.ts  useSettings.ts  useTrainingSession.ts  useWheelNavigation.ts
frontend/src/pages/: AboutPage.tsx  DataPage.tsx  DataViewerPage.tsx  EditorPage.tsx  LoadingPage.tsx  Options.tsx  Training.tsx  (+2 more)
src/: run_backend.py
src/trackpad_chars/: app.py  cli.py  db.py  model.py  processing.py  recorder.py  state.py  visualizer.py
src/trackpad_math/: app.py  config.py  db.py  model.py  processing.py  state.py
(+39 files in other folders)
