[package]
name = "trackpad-math"
version = "0.1.0"
description = " A desktop app that converts trackpad input into mathematical LaTeX symbols"
authors = ["AlexK049"]
license = "MIT"
repository = "https://github.com/AlexK049/trackpad-math"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "trackpad_math_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = ["devtools", "tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
chrono = "0.4.43"
tokio = { version = "1", features = ["sync", "time"] }
